fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,12 +28,12 @@ body {
 }
 
 .small-button {
-    @apply bg-white dark:bg-slate-600 dark:text-white font-bold p-3 rounded-lg border border-gray-300 dark:border-gray-500 hover:border-gray-400 disabled:bg-slate-300 dark:disabled:bg-slate-700 disabled:text-slate-500 disabled:cursor-not-allowed;
+    @apply bg-white dark:bg-slate-700 dark:text-white font-bold p-3 rounded-lg border border-gray-300 dark:border-gray-500 hover:border-gray-400 disabled:bg-slate-300 dark:disabled:bg-slate-700 disabled:text-slate-500 disabled:cursor-not-allowed;
 }
 
 /* card */
 .card {
-    @apply bg-white dark:bg-slate-700 dark:text-white shadow-md rounded-3xl;
+    @apply bg-white dark:bg-slate-800 dark:text-white shadow-md rounded-3xl;
 }
 
 .card .card-title {
@@ -51,11 +51,15 @@ body {
 }
 
 .table thead th {
-    @apply py-2 sm:py-5 text-gray-700 border-b-2 border-blue-200 dark:border-slate-500 dark:text-white;
+    @apply py-2 sm:py-5 text-gray-700 border-b-2 border-blue-200 dark:border-gray-500 dark:text-lime-300;
+}
+
+.table tbody tr {
+    @apply hover:bg-orange-100 dark:hover:bg-slate-600;
 }
 
 .table tfoot th {
-    @apply py-2 sm:py-4 text-gray-700 border-t-2 border-b-0 border-orange-200 dark:border-slate-500 dark:text-yellow-300;
+    @apply py-2 sm:py-4 text-gray-700 border-t-2 border-b-0 border-orange-200 dark:border-gray-500 dark:text-yellow-300;
 }
 
 .table th,
@@ -64,7 +68,7 @@ body {
 }
 
 .table tr {
-    @apply border-b border-slate-200 last:border-0 dark:border-slate-600;
+    @apply border-b border-gray-200 last:border-0 dark:border-gray-600;
 }
 
 .form-control {
